[gd_scene load_steps=2 format=3 uid="uid://dt8dlp0v43r7p"]

[ext_resource type="Script" path="res://Scripts/Screens/final_level_completed.gd" id="1_7i47t"]

[node name="FinalLevelCompleted" type="Control" node_paths=PackedStringArray("info_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7i47t")
info_label = NodePath("VBoxContainer2/Info")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.40408
anchor_top = 0.231481
anchor_right = 0.59592
anchor_bottom = 0.408951
offset_top = -5.5
offset_bottom = 5.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
metadata/_edit_use_anchors_ = true

[node name="YouWin" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "YOU WIN!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.374132
anchor_top = 0.46142
anchor_right = 0.625868
anchor_bottom = 0.847222
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
metadata/_edit_use_anchors_ = true

[node name="NewRun" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "New Run"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Main Menu
"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/NewRun" to="." method="_on_new_run_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
